# trust_storage

./: .gitignore  README.md  besutestnode.Dockerfile  clienttestnode.Dockerfile  docker-compose.yaml
.github/workflows/: push_to_rescale_gitlab.yml
besu/: .env  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
ipfs/: Dockerfile  docker-compose.yaml  init.sh
rest/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rest/configs/: ec.key  ec.pub
rest/src/: main.rs
rest/src/api/: cat.rs  create.rs  mod.rs
rest/src/ipfs/: ipfs_api.rs  mod.rs
rest/src/ipfs/types/: create.rs  error.rs  mod.rs
rest/src/jwt/: mod.rs  payload.rs
trust_storage_client/: README.md  requirements.txt
trust_storage_client/tests/: test_besuclient.py  test_truststorageclient.py
trust_storage_client/trust_storage_client/: besu_client.py  utils.py
truststorageclient/: Dockerfile  setup.py
truststorageclient/tests/: keepalive.py  test_besuclient.py  test_restclient.py  test_truststorageclient.py
truststorageclient/truststorageclient/: besuclient.py  restclient.py  truststorageclient.py  utils.py
utils/besu_qbft_genesis_creator/: docker-compose.yaml  main.rs
utils/besu_qbft_genesis_creator/data/: template.json
utils/eth_account_creator/: Dockerfile  README.md  docker-compose.yaml  main.rs
utils/eth_account_creator/docker/: Dockerfile  docker-compose.yaml  (+1 more)
utils/ipfs_swarm_key_creator/: docker-compose.yaml
utils/qbft_genesis_creator/: Dockerfile  README.md  docker-compose.yaml  main.rs
utils/solidity_compiler/: README.md  docker-compose.yaml
(+24 files in other folders)
