[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["tokio","rustls"] }
josekit = "0.10.0"
serde_json = "1.0.111"
serde = "1.0.197"
thiserror = "1.0.65"
reqwest = { version = "0.12.9", features = ["json","multipart","stream","rustls-tls"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
